# droid-byok

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  droid-byok  install.sh  providers.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
packaging/: entrypoint.py
src/droid_byok/: __init__.py  __main__.py  core.py  tui.py
tests/: test_tui.py
